--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express-session": "^1.17.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "serve": "^13.0.2"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
